SERVER-70888 ScopedRangeDeleterLock might lead to a deadlock on stepdown